[package]
name = "ltc2942"
description = "A platform-agnostic driver to interface with the LTC2941 battery monitor IC"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "battery-monitor"]
license = "MIT"
version = "0.1.0"
repository = "https://github.com/vertigo-designs/ltc2941.git"
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.0"
enum-iterator = "0.6.0"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
